# MIRAM

./: README.md
Projet/: CMakeLists.txt  Test_A.txt  Test_H.txt  Test_Q.txt  bigA_test.txt  matrice_250x250.txt
Projet/include/: blas_custom.h  io.h  lib.h  miram.h  tools.h
Projet/src/: blas_custom.c  io.c  main.c  miram.c  tests_no_mpi.c  tools.c
